NIFI-15513 Added unit tests for property migration of processors and controller services in extended bundles e-g, snowflake, social-media, splunk, update-attribute, websocket, windows-event-log, workday and zendesk.